--- a/apps/dash-salesforce-crm/assets/s1.css
+++ b/apps/dash-salesforce-crm/assets/s1.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   background-color: #f9f9f9;
   font-family: 'Asap', sans-serif;
-  color: #506784;
+  /* color: #506784; */
   -webkit-user-select: none;
   /* Chrome all / Safari all */
   -moz-user-select: none;
@@ -164,6 +164,11 @@ table {
 
 .indicator {
   flex: 1;
+
+}
+
+.indicator_value{
+  font-size: 2rem;
 }
 
 ::-webkit-scrollbar {
@@ -177,7 +182,7 @@ table {
     display: -ms-grid;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: auto 1fr 1fr 1fr auto;
     width:80%;
     margin-left: auto;
     margin-right: auto;
@@ -195,8 +200,8 @@ table {
     -ms-grid-column-span: 2;
     grid-column: 1 / 3;
     -ms-grid-row: 2;
-    -ms-grid-row-span: 2;
-    grid-row: 2 / 6;
+    -ms-grid-row-span: 3;
+    grid-row: 2 / 5;
   }
 
   #lead_grid > .indicators {
@@ -214,8 +219,8 @@ table {
 
   #leads_source_container {
     -ms-grid-row: 3;
-    -ms-grid-row-span: 3;
-    grid-row: 3 / 6;
+    -ms-grid-row-span: 2;
+    grid-row: 3 / 5;
     -ms-grid-column: 3;
     -ms-grid-column-span: 2;
     grid-column: 3 / 5;
@@ -223,8 +228,8 @@ table {
 
   #converted_leads_container {
     -ms-grid-row: 3;
-    -ms-grid-row-span: 3;
-    grid-row: 3 / 6;
+    -ms-grid-row-span: 2;
+    grid-row: 3 / 5;
     -ms-grid-column: 5;
     -ms-grid-column-span: 2;
     grid-column: 5 / 7;
