--- a/apps/dash-daq-iv-tracer/assets/iv-tracer-style.css
+++ b/apps/dash-daq-iv-tracer/assets/iv-tracer-style.css
@@ -4,62 +4,56 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: 300 !important;
 }
+
 .title {
   font-family: "Dosis", sans-serif;
   font-weight: 500;
   font-size: 25px;
 }
+
 .logo {
-  /* height: 80%; */
   height: 30%;
   width: auto !important;
   padding-left: 5%;
-  /* float: right; */
-  /* margin-right: 80px; */
 }
+
 #_dash-global-error-container
   > div
   > div.dash-debug-menu.dash-debug-menu--closed {
   display: none;
 }
+
 .gRFjMP {
   margin-top: 0;
 }
+
 .flex-display {
   display: flex;
 }
-/* .js-plotly-plot .plotly .modebar {
-  padding-right: 60px;
-} */
+
 .single_div_toggle_style {
   width: 80%;
-  /* display: flex; */
-  /* flex-direction: row; */
   margin: auto;
   align-items: center;
   justify-content: space-between;
 }
+
 .sweep_div_toggle_style {
-  /* display: flex; */
-  /* flex-direction: column; */
   align-items: center;
   justify-content: space-around;
 }
+
 .banner {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   height: 80px;
-  /* padding-left: 5%; */
 }
+
 .gRFjMP {
   margin-left: 5px;
 }
-
-/* .banner {
-  background-color: white !important;
-} */
 
 .intro-banner {
   padding: 0 5%;
@@ -88,14 +82,9 @@ body {
 }
 
 #figure-card {
-  margin-left: 4.5%; /*Set this to balance margin gap in skeleton*/
-  /* border-radius: 10px;
-  box-shadow: 0 6px 14px rgba(80, 103, 132, 0.2); */
-  display: flex;
-  /* height: 100%; */
+  margin-left: 4.5%;
   flex-direction: column;
   justify-content: center;
-  flex: 1;
 }
 
 #page-content > div {
@@ -111,7 +100,6 @@ body {
 #control-container {
   vertical-align: top;
   margin-left: 1%;
-  flex: 1;
 }
 
 #up-control-card,
@@ -125,10 +113,9 @@ body {
   align-items: center;
   line-height: 1.6;
 }
+
 #bottom-card {
-  /* margin: 100px; */
   width: 100%;
-  padding: 5% 0 !important;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -176,7 +163,6 @@ body {
 
 #sweep-dt > div > span > input[type="text"] {
   color: #95969a !important;
-  /* background-color: #161616; */
 }
 
 .daq-button > div > button {
