--- a/apps/dash-salesforce-crm/assets/s1.css
+++ b/apps/dash-salesforce-crm/assets/s1.css
@@ -30,14 +30,6 @@ input {
   border-radius: 5px;
 }
 
-.button {
-  background-color: #436cff;
-  color: white;
-  display: block;
-  border-radius: 10px;
-  box-shadow: 4px 4px 4px lightgrey;
-  transition: box-shadow 0.5s;
-}
 
 .button:hover {
   box-shadow: 4px 4px 4px grey;
@@ -80,71 +72,88 @@ input {
   border-radius: 10px;
 }
 
-#tabs {
-  border-top: 1px solid lightgrey;
-  display: flex;
-  flex-direction: row;
-  padding: 1rem 10%;
-  margin-bottom: 1rem;
-  background-color: white;
-}
-
-#tabs > a {
-  width: 15%;
-  text-decoration: none;
-  color: black;
-  font-size: 1.5rem;
-  text-align: center;
-}
-
-#tabs > a:first-child {
-  border-right: 1px solid lightgrey;
-}
-
-#tabs > a:last-child {
-  border-left: 1px solid lightgrey;
-}
-
-#tabs > a::after {
-  content:''; 
-  width:1px; 
-  height:90%; 
-  background:lightgrey; 
-  position:relative;
-}
-
-button {
-  height: 3rem;
-  background-color: white;
-  box-shadow: none;
+.button {
+  background-color: #436cff;
+  color: white;
+  display: block;
   border-radius: 10px;
-  font-size: 1rem;
-  padding: 1rem;
+  box-shadow: 4px 4px 4px lightgrey;
+  transition: box-shadow 0.5s;
 }
 
 .header {
   margin: 0px;
   background-color: white;
   color: black;
-  padding: 1rem 10%;
+  padding: 1rem 5%;
   display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
 }
 
 .header Img {
   margin-left: auto;
   max-height: 6rem;
-  max-width: 50%;
-}
-
-.control .Select-control {
-  border: none;
+  max-width: 33%;
 }
 
 .app-title {
   color: black;
+  padding-left: 5%;
   font-size: 2rem;
   letter-spacing: -.1rem;
   vertical-align: middle;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+}
+
+#subtitle {
+  display: none;
+}
+
+.header button {
+  background-color: white;
+  box-shadow: none;
+  border-radius: 10px;
+  font-size: 1rem;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+#learn_more {
+  display: none;
+}
+
+#menu {
+  display: block;
+  border: none;
+  font-size: 2rem;
+}
+
+#menu p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.tabs {
+  border-top: 1px solid lightgrey;
+  display: none;
+  flex-direction: column;
+  padding: 1rem 10%;
+  margin-bottom: 1rem;
+  background-color: white;
+}
+
+.tabs > a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.control .Select-control {
+  border: none;
 }
 
 table {
@@ -182,13 +191,67 @@ table {
   background: transparent;  /* Optional: just make scrollbar invisible */
 }
 
+#cases_reasons {
+  height: 100%;
+}
+
+@media (max-width: 900px) {
+  .indicator {
+    align-content: center;
+    justify-items: center;
+    text-align: center;
+  }
+
+  .indicator:first-child {
+    margin-right: 0;
+  }
+  
+  .indicator:last-child {
+    margin-left: 0;
+  }
+}
+
 @media (min-width: 900px) {
+
+  .header {
+    flex-direction: row;
+  }
+
+  #subtitle {
+    display: block;
+  }
+  #learn_more {
+    display: block;
+  }
+
+  #menu {
+    display: none;
+  }
+
+  .tabs {
+    display: flex;;
+    flex-direction: row;
+  }
+
+  .tabs > a {
+    width: 20%;
+  }
+  
+  .tabs > a:first-child {
+    border-right: 1px solid lightgrey;
+  }
+  
+  .tabs > a:last-child {
+    border-left: 1px solid lightgrey;
+  }
 
   #lead_grid {
     display: -ms-grid;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto 1fr 1fr 1fr auto;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    -ms-grid-rows: auto;
     width:80%;
     margin-left: auto;
     margin-right: auto;
@@ -198,6 +261,9 @@ table {
     -ms-grid-column: 6;
     -ms-grid-column-span: 1;
     grid-column: 6 / 7;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
     align-self: end
   }
 
@@ -248,7 +314,7 @@ table {
     -ms-grid-column: 1;
     -ms-grid-column-span: 6;
     grid-column: 1 / 7;
-    max-height: 500px;
+    /* max-height: 500px; */
   }
 
   #opportunity_grid {
@@ -258,13 +324,18 @@ table {
     margin-left: auto;
     margin-right: auto;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto 1fr 1fr 1fr 1fr auto;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    -ms-grid-rows: auto;
   }
 
   #new_opportunity {
     -ms-grid-column: 6;
     -ms-grid-column-span: 1;
     grid-column: 6 / 7;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 1;
     align-self: end;
   }
 
@@ -281,6 +352,9 @@ table {
     -ms-grid-column: 3;
     -ms-grid-column-span: 4;
     grid-column: 3 / 7;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
   }
 
   #opportunity_heatmap {
@@ -297,8 +371,8 @@ table {
     -ms-grid-column-span: 3;
     grid-column: 1 / 4;
     -ms-grid-row: 6;
-    -ms-grid-row-span: 5;
-    grid-row: 6 / 11;
+    -ms-grid-row-span: 4;
+    grid-row: 6 / 7;
   }
 
   #top_lost_container {
@@ -306,8 +380,8 @@ table {
     -ms-grid-column-span: 3;
     grid-column: 4 / 7;
     -ms-grid-row: 6;
-    -ms-grid-row-span: 5;
-    grid-row: 6 / 11;
+    -ms-grid-row-span: 4;
+    grid-row: 6 / 7;
   }
 
   #cases_grid {
@@ -316,7 +390,9 @@ table {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    -ms-grid-rows: auto;
     grid-template-rows: auto;
   }
 
@@ -324,6 +400,9 @@ table {
     -ms-grid-column: 6;
     -ms-grid-column-span: 1;
     grid-column: 6 / 7;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 1;
     align-self: end;
   }
 
@@ -332,14 +411,17 @@ table {
     -ms-grid-column-span: 2;
     grid-column: 1 / 3;
     -ms-grid-row: 2;
-    -ms-grid-row-span: 4;
-    grid-row: 2 / 6;
+    -ms-grid-row-span: 3;
+    grid-row: 2 / 5;
   }
 
   #cases_indicators {
     -ms-grid-column: 3;
     -ms-grid-column-span: 4;
     grid-column: 3 / 7;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
   }
 
   #cases_reasons_container {
@@ -347,8 +429,8 @@ table {
     -ms-grid-column-span: 2;
     grid-column: 3 / 5;
     -ms-grid-row: 3;
-    -ms-grid-row-span: 3;
-    grid-row: 3 / 6;
+    -ms-grid-row-span: 2;
+    grid-row: 3 / 5;
   }
 
   #cases_by_period_container {
@@ -356,17 +438,17 @@ table {
     -ms-grid-column-span: 2;
     grid-column: 5 / 7;
     -ms-grid-row: 3;
-    -ms-grid-row-span: 3;
-    grid-row: 3 / 6;
+    -ms-grid-row-span: 2;
+    grid-row: 3 / 5;
   }
 
   #cases_by_account_container {
     -ms-grid-column: 1;
     -ms-grid-column-span: 6;
     grid-column: 1 / 7;
-    -ms-grid-row: 6;
-    -ms-grid-row-span: 3;
-    grid-row: 6 / 9;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5 / 6;
   }
 
   #cases_by_account {
